--- a/JS-Applications/Modular Applications/Exercise/01.Team-Manager/package.json
+++ b/JS-Applications/Modular Applications/Exercise/01.Team-Manager/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "team-manager",
+  "name": "01.team-manager",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lit-html": "1.3.0",
-    "page": "1.11.6"
+    "lit-html": "^2.2.5",
+    "page": "^1.11.6"
   }
 }
